# PDF_Skimmer_v2

./: README.md  article_analysis.py  chatbot.py  config.py  config.toml  custom_types.py  db_manager.py  gui.py  gui_old.py  gui_v2.py  hello.py  link_converter.py  pdf_process.py  pyproject.toml  skimmer.py  summary_types.py  test.ipynb  utils.py
